--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html>
-    {% include head.html %}
-    <body class="is-offset {% unless site.typekit_kit_id %}wf-inactive{% endunless %}">
-        {% include header.html %}
-        <section role="main">
-            {{ content }}
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/print.css" media="print" />
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <title> {{ page.title }} </title>
+  </head>
+
+  <body>
+    <header>
+      <div class="inner">
+        <h1> {{ site.name }} </h1>
+        <h2>一名老程序员的思考碎片</h2>
+      </div>
+    </header>
+
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+        <section id="main-content">
+          
+          {{ content }}
+
         </section>
-        {% include footer.html %}
-        <script type="text/javascript" src="{{ site.baseurl }}/js/galileo.js"></script>
-    </body>
+
+        <aside id="sidebar">
+        </aside>
+      </div>
+    </div>
+
+  </body>
 </html>
