--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,7 @@
 ---
 layout: default
 ---
+<h2>{{ page.title }}</h2>
+<p class="meta">{{ page.date | date_to_string }}</p>
 
-{% include post.html post=page content=content %}
+{{ content }}
