--- a/css/screen.scss
+++ b/css/screen.scss
@@ -6,7 +6,8 @@
 // Typography
 $base-font-family: "adobe-caslon-pro", "Adobe Caslon Pro", serif;
 $caption-font-family: "ltc-bodoni-175", "Libre Baskerville", serif;
-$banner-font-family: "Sanchez", serif;
+//$banner-font-family: "Sanchez", serif;
+$banner-font-family: "Libre Baskerville", serif;
 $title-font-family: "Libre Baskerville", serif;
 $base-font-size:   18px;
 $base-font-weight: 400;
@@ -29,11 +30,11 @@ $desktop-breakpoint: $layout-width / 0.9;
 $image-splitting-breakpoint: 510px;
 
 // Banner
-$banner-width: 182px;
-$banner-height: 503px;
+$banner-width: 300px;
+$banner-height: 342px;
 $banner-margin: 50px;
-$banner-border-width: 3px;
-$banner-border-offset: 2px;
+$banner-border-width: 0px;
+$banner-border-offset: 10px;
 
 // Images
 // Note that extensions are omitted for use in retina-background-image mixin
