--- a/css/screen.scss
+++ b/css/screen.scss
@@ -4,11 +4,12 @@
 @charset "utf-8";
 
 // Typography
-$base-font-family: "adobe-caslon-pro", "Adobe Caslon Pro", serif;
+//$base-font-family: "adobe-caslon-pro", "Adobe Caslon Pro", serif;
+$base-font-family: "adobe-caslon-pro", "Adobe Caslon Pro", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei","Libre Baskerville", serif;
 $caption-font-family: "ltc-bodoni-175", "Libre Baskerville", serif;
 //$banner-font-family: "Sanchez", serif;
 $banner-font-family: "Libre Baskerville", serif;
-$title-font-family: "Libre Baskerville", serif;
+$title-font-family: "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei","Libre Baskerville", serif;
 $base-font-size:   18px;
 $base-font-weight: 400;
 $base-line-height: 1;
