--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
                 </p>
                 <p class="article-hint">
                     如果你对本文有任何的建议或者疑问, 可以在
-                    <a href="https://github.com/godsme/godsme.github.io/issues" target="_blank">这里给我提 Issues</a>, 谢谢! :)
+                    <a href="https://github.com/godsme/godsme.github.io/issues" target="_blank">这里提issues</a>
                 </p>
             </header>
             {{ content }}
